--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -4,31 +4,26 @@
     height: 700px;
     position: relative;
     z-index: 1;
-    right: 270px;
-    align-items: center;
-    top: 40px;
+    display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .teamTitle {
     font-size: 3rem;
     font-weight: 400;
-    text-align: left;
     position: relative;
     font-style: oblique;
     color: #ffffff;
     display: flex;
-    flex-direction: row;
     z-index: 1;
-    right: 40px;
-    margin-bottom: 800px;
     height: 50px;
     width: 400px;
 }
 
 .mainContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: relative;
     justify-content: space-between;
     align-items: center;
@@ -41,7 +36,7 @@
     padding: 6rem;
 }
 
-.chumaDescription {
+.astroDescription {
     position: relative;
     font-style: oblique;
     color: #ffffff;
@@ -54,7 +49,7 @@
     border-radius: 10px;
 }
 
-.chumaDescription p {
+.astroDescription p {
     font-size: 1.1rem;
     font-weight: 400;
     text-align: center;
@@ -65,11 +60,47 @@
     margin-top: 30px;
 }
 
-.chumaDescription img {
+.astroDescription img {
     position: relative;
     z-index: 1;
     height: 500px;
     width: 400px;
     border-radius: 10px;
     filter: blur(5px);
+}
+
+.chumaDescription img {
+    position: relative;
+    z-index: 1;
+    height: 500px;
+    width: 400px;
+    border-radius: 10px;
+}
+.chumaDescription {
+    position: relative;
+    font-style: oblique;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    z-index: -1;
+    height: 500px;
+    width: 400px;
+    border: #ffffff 1px solid;
+    border-radius: 10px;
+    justify-content: center;
+}
+
+.chumaDescription h3 {
+    font-size: 1.1rem;
+    font-weight: 400;
+    text-align: center;
+    position: relative;
+    font-style: oblique;
+    color: #ffffff;
+    z-index: 1;
+    margin-top: 30px;
+    text-align: center;
+    border: #ffffff 1px solid;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.63);
 }
