--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   position: fixed;
   z-index: -1;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .container {
@@ -13,6 +14,8 @@
   height: 100%;
   position: relative;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
  /* Navbar & Content */
