--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -7,9 +7,12 @@
     display: flex;
     flex-direction: row;
     background-color: rgba(0, 0, 0, 0.63);
+    border-left: 0px;
+    border-right: 0px;
+    overflow-x: hidden;
 }
 
-.footerHeader {
+.footerLeft h3 {
     font-size: 2rem;
     font-weight: 490;
     position: relative;
@@ -76,7 +79,7 @@
     position: relative;
 }
 
-.footerRightContainer {
+.socials {
     display: flex;
     flex-direction: row;
     margin: 0 auto;
@@ -86,7 +89,7 @@
     margin-top: 70px;
 }
 
-.footerHeader2 {
+.footerRight h3 {
     font-size: 1.2rem;
     font-weight: 490;
     position: relative;
