--- a/styles/Connect.module.css
+++ b/styles/Connect.module.css
@@ -4,10 +4,13 @@
     position: relative;
     justify-content: space-evenly;
     align-items: center;
-    bottom: 275px;
+    bottom: 295px;
     width: 100%;
-    height: 1000px;
+    height: 870px;
     overflow-x: hidden;
+    margin: auto;
+    border: #fff 1px solid;
+    border-left: 0px;
 }
 
 .connectTitle {
@@ -20,7 +23,6 @@
     z-index: 1;
     height: 50px;
     width: 400px;
-    align-items: left;
 }
 
 .connectContainer {
@@ -28,14 +30,13 @@
     flex-direction: column;
     position: relative;
     align-items: center;
-    border: #fff 1px solid;
+    justify-content: center;
+    margin: auto;
     width: 250px;
     height: 200px;
     border-radius: 10px;
     padding: 6px;
-    background-color: rgba(0, 0, 0, 0.575);
     margin-top: 30px;
-    border: #ffffff 1px solid;
 }
 
 .substack img {
@@ -59,7 +60,7 @@
     font-style: oblique;
     color: #ffffff;
     z-index: 1;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 .textContainer {
@@ -72,7 +73,8 @@
     border: #fff 1px solid;
     width: 100%;
     height: 200px;
-    background-color: rgba(55, 132, 151, 0.568);
+    background-color: rgba(112, 192, 212, 0.555);
+    border-left: 0px;
 }
 
 .textContainer h1 {
@@ -84,7 +86,7 @@
     display: flex;
     height: 50px;
     width: 400px;
-    margin-bottom: 120px;
+    margin-bottom: 145px;
 }
 
 .socialsContainer {
@@ -94,10 +96,10 @@
     justify-content: space-evenly;
     align-items: center;
     border: #fff 1px solid;
-    width: 550px;
-    height: 150px;
-    background-color: rgba(55, 132, 151, 0.568);
-    border-radius: 10px;
+    width: 570px;
+    right: 10px;
+    height: 140px;
+    background-color: rgba(112, 192, 212, 0.555);
     padding: 6px;
 }
 
@@ -122,7 +124,6 @@
 }
 
 .mainconnectContainer {
-    display: flex;
     flex-direction: column;
     position: relative;
     align-items: center;
@@ -131,8 +132,14 @@
     height: 600px;
     border-radius: 10px;
     padding: 6px;
-    background-color: rgba(0, 0, 0, 0.575);
+    background-color: rgba(0, 0, 0, 0.76);
     border: #ffffff 1px solid;
+    flex: 0 5 auto;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    margin-bottom: 70px;
+    display: flex;
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
 }
 
 .alpha {
@@ -142,5 +149,39 @@
     align-items: center;
     width: 550px;
     height: 600px;
+    margin-top: 26px;
+    margin: auto;
+}
+
+.alpha h3 {
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-align: center;
+    position: relative;
+    font-style: oblique;
+    color: #ffffff;
+    z-index: 1;
+    margin-top: 30px;
+}
+
+.button {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    align-items: center;
+    border: #fff 1px solid;
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
     padding: 6px;
+    border: #ffffff 1px solid;
+    background-color: rgba(112, 192, 212, 0.555);
+    border-left: 0px;
+    font-weight: 400;
+    position: relative;
+    font-style: oblique;
+    color: #ffffff;
+    text-align: center;
+    font-size: 1rem;
+    justify-content: center;
 }
