--- a/styles/Features.module.css
+++ b/styles/Features.module.css
@@ -1,20 +1,3 @@
-.featureTitle {
-  font-size: 3rem;
-  font-weight: 400;
-  width: 100%;
-  text-align: left;
-  justify-content: left;
-  align-items: left;
-  position: relative;
-  font-style: oblique;
-  color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 10px;
-  bottom: 80px;
-  right: 29px;
-}
-  
 .mainContainer {
   border: #fff 1px solid;
   padding: 6rem;
@@ -23,12 +6,14 @@
   position: relative;
   overflow-y: hidden;
   overflow-x: hidden;
-  top: 32px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 240px;
+  margin: auto;
+  bottom: 60px;
+  border-left: 0px;
+  margin-bottom: 135px;
 }
 
 .planet img {
@@ -260,4 +245,33 @@
   background-color: rgba(0, 0, 0, 0.63);
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.829);
   padding: 6px;
+}
+
+.teamTitle {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  justify-content: space-evenly;
+  align-items: center;
+  border: #fff 1px solid;
+  width: 100%;
+  height: 200px;
+  background-color: #493b7388;
+  margin: auto;
+  border-left: 0px;
+  top: 30px
+}
+
+.teamTitle h1 {
+  font-size: 3rem;
+  font-weight: 400;
+  position: relative;
+  font-style: oblique;
+  color: #ffffff;
+  display: flex;
+  height: 50px;
+  width: 400px;
+  margin-bottom: 140px;
+  text-align: center;
+  justify-content: center;
 }
