--- a/styles/Roadmap.module.css
+++ b/styles/Roadmap.module.css
@@ -1,32 +1,17 @@
 .roadmapContainer {
     border: #fff 1px solid;
     width: 100%;
-    height: 1000px;
+    height: 940px;
     position: relative;
     overflow-y: hidden;
-    margin-bottom: 240px;
+    margin-bottom: 135px;
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow-x: hidden;
-}
-
-.roadmapText {
-    font-size: 3rem;
-    font-weight: 400;
-    width: 250px;
-    height: 100px;
-    position: relative;
-    font-style: oblique;
-    color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    margin-top: 35px;
-    z-index: 1;
-    right: 784px;
-    text-align: center;
-    top: 12px;
-    justify-content: center;
+    bottom: 85px;
+    flex: 0 10 auto;
+    border-left: 0px;
 }
 
 .roadmapContainer2 {
@@ -37,7 +22,8 @@
     flex-direction: column;
     position: relative;
     border-radius: 6px;
-    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.459)
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.459);
+    margin-top: 110px;
 }
 
 .roadmapContainer2 img {
@@ -57,3 +43,32 @@
     object-fit: contain;
     width: 2000px;
 }
+
+.teamTitle h1 {
+    font-size: 3rem;
+    font-weight: 400;
+    position: relative;
+    font-style: oblique;
+    color: #ffffff;
+    display: flex;
+    height: 50px;
+    width: 400px;
+    margin-bottom: 140px;
+    text-align: center;
+    justify-content: center;
+}
+
+.teamTitle {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: space-evenly;
+    align-items: center;
+    border: #fff 1px solid;
+    width: 100%;
+    height: 200px;
+    background-color: #13295681;
+    margin: auto;
+    border-left: 0px;
+}
+
