--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -7,20 +7,36 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 160px;
+    top: 100px;
+    flex: 0 3 auto;
 }
 
 .teamTitle {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: space-evenly;
+    align-items: center;
+    border: #fff 1px solid;
+    width: 100%;
+    height: 200px;
+    background-color: rgba(146, 42, 103, 0.596);
+    margin: auto;
+    border-left: 0px;
+}
+
+.teamTitle h1 {
     font-size: 3rem;
     font-weight: 400;
     position: relative;
     font-style: oblique;
     color: #ffffff;
     display: flex;
-    z-index: 1;
     height: 50px;
     width: 400px;
-    right: 680px;
+    margin-bottom: 140px;
+    text-align: center;
+    justify-content: center;
 }
 
 .mainContainer {
@@ -29,12 +45,14 @@
     position: relative;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 517px;
+    margin-bottom: 135px;
     border: #fff 1px solid;
     width: 100%;
-    height: 840px;
+    height: 750px;
     overflow-y: hidden;
     overflow-x: hidden;
+    bottom: 85px;
+    border-left: 0px;
 }
 
 .astroDescription {
@@ -48,12 +66,14 @@
     width: 400px;
     border: #ffffff 1px solid;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322)
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+    flex: 0 2 auto;
+    padding: 2px;
 }
 
 .astroDescription p {
-    font-size: 1.1rem;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 300;
     text-align: center;
     position: relative;
     font-style: oblique;
@@ -90,6 +110,9 @@
     border: #ffffff 1px solid;
     border-radius: 10px;
     justify-content: center;
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+    flex: 0 1 auto;
+    padding: 2px;
 }
 
 .chumaDescription h3 {
@@ -104,6 +127,9 @@
     text-align: center;
     border: #ffffff 1px solid;
     border-radius: 10px;
+    padding: 2px;
+    width: 100%;
+    right: 3px;
     background-color: rgba(0, 0, 0, 0.76);
 }
 
