--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -20,7 +20,7 @@
     border: #fff 1px solid;
     width: 100%;
     height: 200px;
-    background-color: rgba(146, 42, 103, 0.596);
+    background-color: #a3426262;
     margin: auto;
     border-left: 0px;
 }
