--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -1,11 +1,23 @@
 .gameWindow {
     width: 100%;
     height: 100vh;
-    background-color: #111;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #fff;
     font-size: 1.5rem;
     flex-direction: column;
+    z-index: -1;
+}
+
+.gameContainer {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 1.5rem;
+    flex-direction: column;
+    z-index: 1;
 }
