--- a/styles/Features.module.css
+++ b/styles/Features.module.css
@@ -137,6 +137,7 @@
 .feature3:hover,
 .feature4:hover {
   transform: translateY(-15px);
+  box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
 }
 
 .feature,
