--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -10,6 +10,13 @@
     border-left: 0px;
     border-right: 0px;
     overflow-x: hidden;
+    transition: all 0.3s ease-in-out;
+}
+
+.mainContainer:hover {
+    transform: translateY(-15px);
+    height: 170px;
+
 }
 
 .footerLeft h3 {
@@ -58,6 +65,11 @@
     height: 100px;
     display: flex;
     position: relative;
+    transition: all 0.3s ease-in-out;
+}
+
+.logo:hover {
+    transform: translateY(-8px);
 }
 
 .logo img {
@@ -93,12 +105,12 @@
     height: 50px;
     display: flex;
     position: relative;
-    
+    transition: all 0.3s ease-in-out;
 }
 
 .img1 img {
-    width: 50%;
-    height: 50%;
+    width: 72%;
+    height: 51%;
     position: relative;
     top: 12px;
     left: 12px;
@@ -112,7 +124,7 @@
 
 .img3 img {
     width: 95%;
-    height: 100%;
+    height: 99%;
     position: relative;
     top: 1px;
 }
@@ -125,14 +137,15 @@
     width: 130px;
     height: 40px;
     border-radius: 10px;
-    padding: 1px;
+    padding: 3px;
     align-items: center;
     justify-content: center;
     margin-bottom: 13px;
     bottom: 6px;
     position: relative;
     background-color: #4431678f;
-    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.39);;
+    box-shadow: 2px 2px 10px 2px #443167a8;
+    transition: all 0.3s ease-in-out;
     left: 150px;
 }
 
@@ -156,4 +169,15 @@
     align-items: left;
     bottom: 60px;
     margin-left: 100px;
+}
+
+.img1:hover,
+.img2:hover,
+.img3:hover {
+    transform: translateY(-6px);
+}
+
+.socials:hover {
+    transform: translateY(-5px);
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
 }
