--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -41,6 +41,12 @@
   border-left: 0px;
 }
 
+.navbar:hover {
+  transform: translateY(6px);
+  height: 45px;
+  margin-bottom: 20px;
+}
+
 .logo {
   width: 50px;
   height: 50px;
