--- a/styles/Questions.module.css
+++ b/styles/Questions.module.css
@@ -17,6 +17,12 @@
     color: #fcfcfc;
     top: 30px;
     box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .question:hover {
+    background-color: #3b56a283;
+    transform: translateY(-5px);
   }
   
   .arrow {
