--- a/styles/Roadmap.module.css
+++ b/styles/Roadmap.module.css
@@ -21,8 +21,9 @@
     flex-direction: column;
     position: relative;
     border-radius: 6px;
-    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.459);
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.459);
     margin-top: 110px;
+    transition: all 0.3s ease-in-out;
 }
 
 .roadmapContainer2 img {
@@ -30,6 +31,7 @@
     z-index: 1;
     object-fit: contain;
     width: 100%;
+    height: 100%;
     border-radius: 6px;
     justify-content: center;
     align-items: center;
@@ -70,5 +72,15 @@
     margin: auto;
     border-left: 0px;
     margin-top: 20px;
+    transition: all 0.3s ease-in-out;
 }
 
+.teamTitle:hover {
+    background-color: #08163196;
+    transform: translateY(-15px);
+}
+
+.roadmapContainer2:hover {
+    transform: translateY(-15px);
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+}
