--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -23,6 +23,12 @@
     background-color: #a3426262;
     margin: auto;
     border-left: 0px;
+    transition: all 0.3s ease-in-out;
+}
+
+.teamTitle:hover {
+    background-color: #290819a8;
+    transform: translateY(-15px);
 }
 
 .teamTitle h1 {
@@ -65,9 +71,16 @@
     width: 400px;
     border: #ffffff 1px solid;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+    box-shadow: 2px 2px 10px 2px rgba(5, 5, 5, 0.322);
     flex: 0 2 auto;
     padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.astroDescription:hover,
+.chumaDescription:hover {
+    transform: translateY(-15px);
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
 }
 
 .astroDescription p {
@@ -109,9 +122,10 @@
     border: #ffffff 1px solid;
     border-radius: 10px;
     justify-content: center;
-    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.322);
     flex: 0 1 auto;
     padding: 2px;
+    transition: all 0.3s ease-in-out;
 }
 
 .chumaDescription h3 {
