--- a/styles/Whitepaper.module.css
+++ b/styles/Whitepaper.module.css
@@ -107,7 +107,17 @@
     color: #fff;
     font-style: oblique;
     box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.829);
+    transition: all 0.3s ease-in-out;
   }
+
+  .button:hover {
+    background-color: #493b73;
+    border: 1px solid #fff;
+    border-radius: 6px;
+    box-shadow: 2px 2px 10px 2px rgba(252, 252, 252, 0.322);
+    transform: translateY(-8px);
+    cursor: pointer;
+}
 
   .button p {
     font-size: 1rem;
@@ -126,7 +136,7 @@
   .buttonContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     position: relative;
     width: 100%;
